Prevent buttons in filter summary collapsing when on small viewport

--- a/src/filter/summary/styles.css
+++ b/src/filter/summary/styles.css
@@ -4,7 +4,7 @@
   font-size: 13px;
   height: 4rem;
   min-height: 4rem;
-  min-width: 640px;
+  min-width: 800px;
   position: relative;
 }
 
